--- a/events/index.html
+++ b/events/index.html
@@ -63,7 +63,7 @@
                 <li><a href="/events" class="active">Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
-                <!--<li><a href="/feedback" >Feedback</a></li>-->
+                =<li><a href="/feedback" >Feedback</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
@@ -141,7 +141,7 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 						<div class="appearance-details__location">Seattle, Washington</div>
 			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
-    </div>                                                                                                                                                                                                                 <div class="row appearance">
+    </div>                                                                                                                                                                                             <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							June 24, 2015
 					</div>
@@ -151,6 +151,15 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 			<p class="appearance-details__title">Talk: From Chicago to London: A Conceptual Map for TDD - Yitzchok Willroth<br>
 Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 </p>
+		</div>
+    </div>                                                 <div class="row appearance">
+		<div class="col-md-2 text-right appearance-date">
+							July 8, 2015
+					</div>
+		<div class="col-md-10 appearance-details">
+							<p class="appearance-details__event">PHP Hampshire User Group
+						<div class="appearance-details__location">Portsmouth, England</div>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
     </div>                                                                                                                                                                                                                 <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
@@ -172,21 +181,13 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 						<div class="appearance-details__location">Columbus, Ohio</div>
 			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
-    </div>                                                                                                                                                                                                <div class="row appearance">
-		<div class="col-md-2 text-right appearance-date">
-					</div>
-		<div class="col-md-10 appearance-details">
-							<p class="appearance-details__event">PHP Hampshire User Group
-						<div class="appearance-details__location">Portsmouth, England</div>
-			<p class="appearance-details__title">Tald: TBD - Yitzchok Willroth</p>
-		</div>
-    </div>                                                    <div class="row appearance">
+    </div>                                                                                                                                                                                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 					</div>
 		<div class="col-md-10 appearance-details">
 							<p class="appearance-details__event">Kansas City User Group
 						<div class="appearance-details__location">Kansas City, Missouri</div>
-			<p class="appearance-details__title">Tald: TBD - Yitzchok Willroth</p>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
     </div>                                                                                                                                                                                                                                                                                                                                                                            </div>
     <div id="past" class="tab-pane fade">
@@ -260,7 +261,7 @@ Talk: Open Source, Love and Social Responsibility - Davey Shafik
 						<div class="appearance-details__location">Brussels, Belgium</div>
 			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
-    </div>                                                                                            <div class="row appearance">
+    </div>                                                                                                                <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							April 14, 2015
 					</div>
@@ -318,7 +319,7 @@ Talk: Open Source, Love and Social Responsibility - Davey Shafik
 						<div class="appearance-details__location">Heerenveen, Netherlands</div>
 			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
-    </div>                                                                                                                                                                                                                    <div class="row appearance">
+    </div>                                                                                                                                                                                                <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							April 21, 2015
 					</div>
