--- a/events/dpc/index.html
+++ b/events/dpc/index.html
@@ -65,7 +65,7 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
-                <!--<li><a href="/feedback" >Feedback</a></li>-->
+                =<li><a href="/feedback" >Feedback</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
