--- a/events/index.html
+++ b/events/index.html
@@ -63,7 +63,7 @@
                 <li><a href="/events" class="active">Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
-                =<li><a href="/feedback" >Feedback</a></li>
+                <!--<li><a href="/feedback" >Feedback</a></li>-->
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
@@ -82,7 +82,7 @@
 <div class="tab-content">
     <div id="upcoming" class="tab-pane fade in active">
         <br />
-                                                                                                                                                                                                                                                                 <div class="row appearance">
+                                                                                                                                                                                                                                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							May 1, 2015
 					</div>
@@ -91,7 +91,7 @@
 						<div class="appearance-details__location">Philadelphia, Pennsylania</div>
 			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
-    </div>                                                 <div class="row appearance">
+    </div>                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							May 8, 2015
 					</div>
@@ -103,7 +103,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing - Yitzchok Willr
 Talk: The Human Side of Software: Managing Cognitive Bias - Yitzchok Willroth
 </p>
 		</div>
-    </div>                                                 <div class="row appearance">
+    </div>                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							May 15, 2015
 					</div>
@@ -112,7 +112,7 @@ Talk: The Human Side of Software: Managing Cognitive Bias - Yitzchok Willroth
 						<div class="appearance-details__location">Verona, Italy</div>
 			<p class="appearance-details__title">Keynote: Everything I Needed to Know, I learned in Rabbinical School - Yitzchok Willroth</p>
 		</div>
-    </div>                                                 <div class="row appearance">
+    </div>                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							May 21, 2015
 					</div>
@@ -123,7 +123,7 @@ Talk: The Human Side of Software: Managing Cognitive Bias - Yitzchok Willroth
 Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth 
 </p>
 		</div>
-    </div>                                                 <div class="row appearance">
+    </div>                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							August 12, 2015
 					</div>
@@ -132,7 +132,7 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 						<div class="appearance-details__location">Louisville, Kentucky</div>
 			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
 		</div>
-    </div>                                                 <div class="row appearance">
+    </div>                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							September 11, 2015
 					</div>
@@ -141,7 +141,7 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 						<div class="appearance-details__location">Seattle, Washington</div>
 			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
-    </div>                                                                                                                                                                                             <div class="row appearance">
+    </div>                                                                                                                                                                                                <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							June 24, 2015
 					</div>
@@ -152,7 +152,7 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 </p>
 		</div>
-    </div>                                                 <div class="row appearance">
+    </div>                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							July 8, 2015
 					</div>
@@ -161,7 +161,7 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 						<div class="appearance-details__location">Portsmouth, England</div>
 			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth</p>
 		</div>
-    </div>                                                                                                                                                                                                                 <div class="row appearance">
+    </div>                                                                                                                                                                                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							July 9, 2015
 					</div>
