--- a/events/openwest/index.html
+++ b/events/openwest/index.html
@@ -66,7 +66,7 @@ Talk: The Human Side of Software: Managing Cognitive Bias - Yitzchok Willroth
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
-                <!--<li><a href="/feedback" >Feedback</a></li>-->
+                <li><a href="/feedback" >Feedback</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
