--- a/events/artisanconf/index.html
+++ b/events/artisanconf/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Talk: TBD - Yitzchok Willroth&lt;br&gt; &middot; Wisdom as a Service
+            Talk: TBD - Yitzchok Willroth&lt;br&gt;
+ &middot; Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -63,7 +64,7 @@
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
-                <!--<li><a href="/feedback" >Feedback</a></li>-->
+                <li><a href="/feedback" >Feedback</a></li>
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
