--- a/events/index.html
+++ b/events/index.html
@@ -136,6 +136,26 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
 		</div>
     </div>                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
+							July 6, 2015
+					</div>
+		<div class="col-md-10 appearance-details">
+							<p class="appearance-details__event">PHP Dorset User Group
+						<div class="appearance-details__location">Westbourne, England</div>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth<br>
+</p>
+		</div>
+    </div>                                                    <div class="row appearance">
+		<div class="col-md-2 text-right appearance-date">
+							July 7, 2015
+					</div>
+		<div class="col-md-10 appearance-details">
+							<p class="appearance-details__event">PHP Northwest User Group
+						<div class="appearance-details__location">Manchester, England</div>
+			<p class="appearance-details__title">Talk: TBD - Yitzchok Willroth<br>
+</p>
+		</div>
+    </div>                                                    <div class="row appearance">
+		<div class="col-md-2 text-right appearance-date">
 							July 8, 2015
 					</div>
 		<div class="col-md-10 appearance-details">
@@ -175,7 +195,7 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
     </div>                        </div>
     <div id="planned" class="tab-pane fade">
         <br />
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <div class="row appearance">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 					</div>
 		<div class="col-md-10 appearance-details">
@@ -194,7 +214,7 @@ Tutorial: Wax On, Wax Off: Code Kata Dojo - Yitzchok Willroth
     </div>                        </div>
     <div id="past" class="tab-pane fade">
         <br />
-                                                                                                                                                                                                                            <div class="row appearance">
+                                                                                                                                                                                                                                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
 							April 22, 2015
 					</div>
