--- a/events/index.html
+++ b/events/index.html
@@ -89,7 +89,7 @@
 		<div class="col-md-10 appearance-details">
 							<p class="appearance-details__event">PeersConf Conference
 						<div class="appearance-details__location">Philadelphia, Pennsylania</div>
-			<p class="appearance-details__title">Talk: Talmudic Maxims to Maximize Your Growth as a Developer - Yitzchok Willroth</p>
+			<p class="appearance-details__title">Keynote: Everything I Really Needed to Know, I Learned in Rabbinical School - Yitzchok Willroth</p>
 		</div>
     </div>                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
