--- a/events/index.html
+++ b/events/index.html
@@ -63,7 +63,7 @@
                 <li><a href="/events" class="active">Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
-                <li><a href="/feedback" >Feedback</a></li>
+                <!--<li><a href="/feedback" >Feedback</a></li>-->
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
@@ -89,7 +89,7 @@
 		<div class="col-md-10 appearance-details">
 							<p class="appearance-details__event">PeersConf Conference
 						<div class="appearance-details__location">Philadelphia, Pennsylania</div>
-			<p class="appearance-details__title">Keynote: Everything I Needed to Know, I Learned in Rabbinical School - Yitzchok Willroth</p>
+			<p class="appearance-details__title">Keynote: Everything I Really Needed to Know, I Learned in Rabbinical School - Yitzchok Willroth</p>
 		</div>
     </div>                                                    <div class="row appearance">
 		<div class="col-md-2 text-right appearance-date">
