--- a/contact/index.html
+++ b/contact/index.html
@@ -63,7 +63,7 @@
                 <li><a href="/events" >Events</a></li>
                 <li><a href="/blog" >Blog</a></li>
                 <li><a href="/map" >Map</a></li>
-                <li><a href="/feedback" >Feedback</a></li>
+                <!--<li><a href="/feedback" >Feedback</a></li>-->
                 <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" class="active">Contact</a></li>
